@@ -117,7 +117,7 @@
 {
     NSEnumerator *enumerator;
     id            object;
-    id            retval = nil;
+    id            retval;
 
     enumerator = [self objectEnumerator];
     while( (object = [enumerator nextObject]) )
@@ -128,6 +128,6 @@
             return object;
         }
     }
-    return retval;
+    return nil;
 }
 @end
